# cleanpt

./: .clang-tidy  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
.github/workflows/: cmake.yml
cmake/: CompilerOptions.cmake
tests/: CMakeLists.txt
